--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <module>spring-boot-security-jwt-mysql</module>
         <module>spring-app-property-demo</module>
         <module>spring-kafka-synchronous-example</module>
+        <module>spring-kafka-consumer-demo</module>
     </modules>
 
 </project>
