--- a/spring-kafka-auth-demo/kafka_server_jaas.conf
+++ b/spring-kafka-auth-demo/kafka_server_jaas.conf
@@ -1,5 +1,14 @@
 KafkaServer {
     org.apache.kafka.common.security.plain.PlainLoginModule required
+    username="admin"
+    password="admin-secret"
     user_user1="user1-secret"
     user_user2="user2-secret";
 };
+
+KafkaClient {
+    org.apache.kafka.common.security.plain.PlainLoginModule required
+    user_admin="admin-secret";
+};
+
+Client {};
