--- a/spring-kafka-auth-demo/src/main/resources/application.properties
+++ b/spring-kafka-auth-demo/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=spring-kafka-auth-demo
-spring.kafka.bootstrap-servers=localhost:29092
+spring.kafka.bootstrap-servers=192.168.1.144:29092
 spring.kafka.properties.security.protocol=SASL_PLAINTEXT
 spring.kafka.properties.sasl.mechanism=PLAIN
 spring.kafka.properties.sasl.jaas.config=org.apache.kafka.common.security.plain.PlainLoginModule required \
