--- a/spring-kafka-auth-demo/kafka_server_jaas.conf
+++ b/spring-kafka-auth-demo/kafka_server_jaas.conf
@@ -11,4 +11,8 @@ KafkaClient {
     user_admin="admin-secret";
 };
 
-Client {};
+Client {
+    org.apache.kafka.common.security.plain.PlainLoginModule required
+    user_user1="user1-secret"
+    user_user2="user2-secret";
+};
