--- a/spring-kafka-tracing/Dockerfile
+++ b/spring-kafka-tracing/Dockerfile
@@ -1,6 +1,6 @@
 # Stage 1: Build the application
 #FROM maven:3.8.4-openjdk-11-slim AS builder
-FROM maven:3.8.4-openjdk-17-slim AS builder
+FROM maven:3.8.4-eclipse-temurin-17 AS builder
 
 # Set the working directory inside the container
 WORKDIR /app
