--- a/spring-kafka-tracing/deployment.yaml
+++ b/spring-kafka-tracing/deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
         - name: spring-kafka-tracing
-          image: leenawat/spring-kafka-tracing:latest
+          image: leenawat/spring-kafka-tracing:13
           ports:
             - containerPort: 8080
 ---
