--- a/spring-kafka-consumer-demo/src/main/resources/application.properties
+++ b/spring-kafka-consumer-demo/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.kafka.bootstrap-servers=kafka:9092
+server.port=0
+spring.kafka.bootstrap-servers=192.168.1.60:9092
 spring.kafka.consumer.group-id=myGroup
